debian-installer (20120804) UNRELEASED; urgency=low

  [ Robert Millan ]
  * Bump kFreeBSD ABI.

  [ Julien Cristau ]
  * Switch from module-init-tools-udeb to libkmod2-udeb (closes: #683790)

  [ Didier Raboud ]
  * Fix typo in the fix for the kfreebsd empty line in Grub.
    (Closes: #680850)

  [ Ian Campbell ]
  * Add netboot images for kirkwood/dreamplug platform.

  [ Samuel Thibault ]
  * Fix gnu-mach-color terminfo into mach-gnu-color.

 -- Robert Millan <rmh@debian.org>  Fri, 03 Aug 2012 15:02:25 +0200

debian-installer (20120712) unstable; urgency=low

  [ Cyril Brulebois ]
  * Team upload.

  [ Julien Cristau ]
  * Update to 3.2.0-3 linux ABI.
  * Follow symlinks when generating checksum files, so the guruplug paths are
    included.  Thanks, Didier Raboud.

  [ Didier Raboud ]
  * Switch the boot backgrounds to the Wheezy joy theme.

  [ Steven Chamberlain ]
  * Fix the place of the kfreebsd empty line in Grub (Closes: #680850).

  [ Samuel Thibault ]
  * Add console-setup-udeb to hurd-i386.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 12 Jul 2012 14:23:12 +0200

debian-installer (20120626) unstable; urgency=low

  [ Cyril Brulebois ]
  * Team upload.
  * Fix FTBFS when some foreign packages are installed in a
    multiarch-enabled environment (Closes: #678943): use arch-qualified
    package names when calling “dpkg -s” when a multiarch-aware dpkg is
    detected.

  [ Christian Perrier ]
  * Add fonts-sil-padauk-udeb to gtk-common to support Burmese
    Closes: #672635

  [ Simon Guinot ]
  * Include LED modules for LaCie devices in armel builds
    Closes: #673132

  [ Samuel Thibault ]
  * Increase hurd-i386 monolithic root size, to fix hang during template
    loading.
  * Enable clock-setup on hurd-i386.
  * Add gzio module to hurd-i386 grub.
  * Remove useless mention of rescue-mode package in cdrom and netinst
    hurd-i386 pkglists.
  * Add net-modules to netboot hurd-i386 pkglist.

  [ Joey Hess ]