@@ -5,6 +5,9 @@ debian-installer (20120804) UNRELEASED; urgency=low
 
   [ Julien Cristau ]
   * Switch from module-init-tools-udeb to libkmod2-udeb (closes: #683790)
+  * Don't remove modules.{dep,alias}.bin from /lib/modules/*, without them
+    kmod doesn't load any module.  Instead remove the non-.bin files, which
+    aren't necessary.  Thanks to Didier Raboud for the report and help.
 
   [ Didier Raboud ]
   * Fix typo in the fix for the kfreebsd empty line in Grub.
